# speculos-hid

./: 50-uhid.rules  Cargo.toml
src/: lib.rs  main.rs
zemu/: index.ts  package-lock.json  package.json
