[package]
name = "speculos-hid"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  { version =  "1.29.1", features = ["full"] }
uhid-virt = "0.0.6"
futures = "0.3.28"
isahc = "1.7.2"
json = "0.12.4"
anyhow = "1.0.72"
byteorder = "1.4.3"

#dump bin
hex = "0.4.3"
hidapi = "2.4.1"
clap = { version = "4.3.21", features = ["derive"] }
humantime = "2.1.0"
